--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,28 +1,47 @@
 body {
   margin: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: white;
-  margin: 30px;
+  margin: 30px 55px;
 }
 
 code {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* header */
 .TopNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .navMenu {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
+.navMenu ul li:hover {
+  text-decoration: underline;
+}
+
+.navMenu ul li:first-child {
+  margin-right: 20px;
+}
+
 ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -32,14 +51,20 @@ li {
 }
 
 .navPicture {
-  justify-content: left;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
 }
 
 .background-picture {
   border-radius: 25px;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 223px;
+  -webkit-filter: brightness(0.7);
+          filter: brightness(0.7);
+  margin: 35px 0 0 0;
 }
 
 .catchphrase {
@@ -53,8 +78,8 @@ li {
 }
 
 .homecontainer {
-  width: 1240px;
-  height: 829px;
+  width: 100%;
+  height: auto;
   border-radius: 25px;
   background-color: #F7F7F7;
 }
@@ -64,7 +89,7 @@ li {
   margin: 30px auto;
   height: 340px;
   border-radius: 10px;
-  background-color: #FF6060;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.5)));
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
@@ -74,6 +99,7 @@ li {
   border-radius: 6px;
   overflow: hidden;
   max-height: 35rem;
+  -webkit-transition: max-height 0.4s ease-in-out;
   transition: max-height 0.4s ease-in-out;
   cursor: pointer;
 }
@@ -84,9 +110,16 @@ li {
 }
 
 .dropdown__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 0.5rem 0.9rem;
   border-radius: 6px;
   background-color: var(--primary-color);
@@ -98,6 +131,7 @@ li {
 }
 
 .dropdown__label img {
+  -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
 
@@ -108,7 +142,8 @@ li {
 }
 
 .arrow_down {
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .dropdown__label h3,
@@ -127,39 +162,33 @@ li {
     overflow: hidden;
     max-height: 35rem;
   }
-
   .dropdown.large {
     width: unset;
     margin-inline: unset;
   }
-
   .dropdown__label,
-.closed {
+  .closed {
     max-height: 30px;
   }
-
   .dropdown__label {
     max-height: 30px;
     padding: 0.5rem 0.9rem;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-
   .dropdown__label h3 {
     font-size: 13px;
   }
-
   .dropdown__label img {
     width: 1rem;
   }
-
   .dropdown__content {
     font-size: 12px;
     padding: 1rem;
   }
-
   .small .dropdown__content {
     font-size: 12px;
   }
 }
-
 /*# sourceMappingURL=style.css.map */
