--- a/src/sass/components/_locCard.scss
+++ b/src/sass/components/_locCard.scss
@@ -5,3 +5,17 @@
     border-radius: 10px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
+
+.rental_card{
+
+}
+
+.card_block{
+    display: block;
+    text-decoration: none;
+    
+}
+
+.card_title{
+
+}
