--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,6 +93,11 @@ li {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
+.card_block {
+  display: block;
+  text-decoration: none;
+}
+
 .dropdown {
   background-color: var(--secondary-color);
   margin-top: 33px;
