--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,4 +2,5 @@
 @import "../sass/components/_header.scss";
 @import "../sass/components/_homecontainer";
 @import "../sass/components/_locCard";
-@import "../sass/components/_dropdown"
+@import "../sass/components/_dropdown";
+@import "../sass/pages/error";
