--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -196,4 +196,39 @@ li {
     font-size: 12px;
   }
 }
+
+.error_page_div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #FF6060;
+}
+
+.error_title {
+  font-weight: 700;
+  font-size: 14em;
+  color: #FF6060;
+  margin: 30px;
+}
+
+.error_message {
+  font-weight: 500;
+  color: #FF6060;
+  font-size: 2em;
+}
+
+.error_back_start {
+  color: #FF6060;
+  margin-top: 50px;
+}
 /*# sourceMappingURL=style.css.map */
