--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,3 +4,6 @@
 @import "../sass/components/_locCard";
 @import "../sass/components/_dropdown";
 @import "../sass/pages/error";
+@import "../sass/components/gallery";
+@import "../sass/pages/home";
+@import "../sass/pages/rental";
