--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,7 +3,8 @@
 @import "../sass/components/_homecontainer";
 @import "../sass/components/_locCard";
 @import "../sass/components/_dropdown";
-@import "../sass/pages/error";
-@import "../sass/components/gallery";
-@import "../sass/pages/home";
-@import "../sass/pages/rental";
+@import "../sass/pages/_error.scss";
+@import "../sass/components/_gallery.scss";
+@import "../sass/pages/_home.scss";
+@import "../sass/pages/_rental.scss";
+@import "../sass/components/_footer.scss";
