--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -75,3 +75,65 @@
       font-size: 12px;
     }
   }
+
+  .container-collapse {
+    width: 50%;
+    .collapse {
+      cursor: pointer;
+      display: flex;
+      justify-content: space-between;
+      background-color: $primary;
+      border-radius: 10px;
+      border: none;
+      font-size: 18px;
+      font-weight: 500;
+      color: white;
+      text-align: left;
+      padding: 0.8em 1em 0em 1em;
+      height: 52px;
+      width: 100%;
+    }
+    .content-collapse {
+      background-color: $secondary;
+      color: $primary;
+      font-size: 18px;
+      font-weight: 400;
+      padding: 18px;
+      line-height: 142.6%;
+      border-radius: 0px 0px 5px 5px;
+      display: none;
+    }
+    .equipment {
+      margin: 0;
+    }
+    .chevron-collapse {
+      transition: transform 0.6s ease;
+    }
+    .active {
+      .chevron-collapse {
+        transform: rotate(180deg);
+      }
+      .content-collapse {
+        display: block;
+      }
+    }
+  }
+  
+  /* Mobile : For screen smaller than 576px */
+  @media screen and (max-width: 576px) {
+    .container-collapse {
+      .collapse {
+        font-size: 13px;
+        height: 24px;
+        border-radius: 5px;
+        padding-top: 0.3em;
+        .chevron-collapse {
+          width: 15px;
+          padding-top: 0.2em;
+        }
+      }
+      .content-collapse {
+        font-size: 12px;
+      }
+    }
+  }
