--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,13 +14,18 @@ margin-right: 20px;
     }
   }
   
-  ul{
+  .navMenu_ul{
     display: flex;
+  
   }
-  li{
-    color:#FF6060;
+  .navMenu_li{
     list-style: none;
+    a{
+      color:#FF6060;
+      text-decoration: none;
+    }
   }
+
   .navPicture{
     justify-content: left;
   }
