--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -82,7 +82,7 @@
       cursor: pointer;
       display: flex;
       justify-content: space-between;
-      background-color: $primary;
+      background-color: #FF6060;
       border-radius: 10px;
       border: none;
       font-size: 18px;
@@ -94,8 +94,8 @@
       width: 100%;
     }
     .content-collapse {
-      background-color: $secondary;
-      color: $primary;
+      background-color: lightgray;
+      color: #FF6060;
       font-size: 18px;
       font-weight: 400;
       padding: 18px;
