--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,3 +1,6 @@
+.main{
+  margin: 0 50px;
+}
 .gallery {
     overflow: hidden;
     position: relative;
@@ -18,6 +21,7 @@
     width: 6rem;
     border: none;
     transition: transform 0.3s ease-in-out;
+    background-color: transparent;
   }
   .gallery__arrow:hover {
     cursor: pointer;
@@ -101,6 +105,9 @@
   .rate ul {
     display: flex;
   }
+  .rate ul li{
+    list-style: none;
+  }
   @media screen and (max-width: 767px) {
     .gallery {
       margin-top: 20px;
@@ -112,11 +119,11 @@
     }
     .gallery__arrow.left {
       left: 0;
-     // background: url("../../visuels/arrow_small_left.svg") center no-repeat;
+      background: url("../visuels/arrow_left.svg") center no-repeat;
     }
     .gallery__arrow.right {
       right: 0;
-   //   background: url("../../visuels/arrow_small_right.svg") center no-repeat;
+      background: url("../visuels/arrow_right.svg") center no-repeat;
     }
   
     .gallery__count {
