--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -54,7 +54,7 @@
 
 
   .main-home {
-    background-color: lightgray;
+    background-color: #F7F7F7;
     border-radius: 25px;
     margin-top: 2em;
     .container-apartment {
