--- a/sass/components/_dropdown.scss
+++ b/sass/components/_dropdown.scss
@@ -101,6 +101,6 @@
   @media screen and (max-width: 375px) {
     .container-collapse{
       width: 100%;
-      margin: 20px 0;
+      margin: 20px 0 0;
     }
   }
