--- a/styles/style.css
+++ b/styles/style.css
@@ -243,7 +243,7 @@ code {
 @media screen and (max-width: 375px) {
   .container-collapse {
     width: 100%;
-    margin: 20px 0;
+    margin: 20px 0 0;
   }
 }
 
